@@ -113,8 +113,8 @@
         },
         {
             "type": "main_ryder",
-            "x": 9,
-            "y": 8
+            "x": 11,
+            "y": 7
         }
     ],
     "objects": [
@@ -149,6 +149,17 @@
             ]
         }
     ],
-    "enemies": [],
+    "enemies": [
+        {
+            "type": "main_bat1",
+            "x": 12,
+            "y": 7
+        },
+        {
+            "type": "main_bat1",
+            "x": 13,
+            "y": 7
+        }
+    ],
     "triggers": {}
 }
